--- a/css/avaaspect.css
+++ b/css/avaaspect.css
@@ -38,7 +38,7 @@ body,
     top: 14px;
     left: 14px;
     border-radius: 36px;
-    background: #FFF url("/img/compass.png") no-repeat scroll 50% 50% / 42px auto;
+    background: #FFF url("../img/compass.png") no-repeat scroll 50% 50% / 42px auto;
 }
 
 .filter .dir {
